<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/green"
    tools:context=".HomeFilterFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:layout_gravity="center"
        app:cardCornerRadius="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:text="@string/filter_other_users_riffs"/>
            <EditText
                android:id="@+id/editViewPitch"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_pitch"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/editViewTonality"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_tonality"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/editViewKey"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_key"
                android:textColor="@color/black"/>
            <EditText
                android:id="@+id/editViewRadius"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/hint_radius"
                android:textColor="@color/black"/>
            <Button
                android:id="@+id/buttonApplyFilter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/btn_apply_filter"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:elegantTextHeight="true"
                android:layout_margin="5dp"
                android:elevation="30dp"
                android:backgroundTint="@color/yellow"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>