<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".RegisterFragment">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/register_background"
        android:scaleType="centerCrop" />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            app:cardCornerRadius="40dp"
            app:cardElevation="20dp"
            android:backgroundTint="@android:color/transparent">

            <FrameLayout
                android:id="@+id/frameLayoutPfp"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="end|center|top"
                android:layout_alignBaseline="@id/textCreateAccount">

                <ImageView
                    android:id="@+id/imageViewPfp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_margin="16dp"
                    android:background="@drawable/rounded_image"
                    android:src="@drawable/pick_pfp" />

                <ImageButton
                    android:id="@+id/buttonSelectImage"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    android:backgroundTint="@color/blackish"
                    android:src="@drawable/baseline_camera_alt_24"
                    android:labelFor="@id/textCreateAccount"
                    android:contentDescription="@string/content_description_select_image" />
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textCreateAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:fontFamily="monospace"
                    android:textColor="@color/yellow"
                    android:text="@string/create_account"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/editTextFirstName"
                    android:layout_marginTop="30dp"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_first_name"
                    android:autofillHints="name"
                    android:inputType="text|textPersonName"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/baseline_perm_identity_white_24"/>
                <EditText
                    android:id="@+id/editTextLastName"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_last_name"
                    android:autofillHints="name"
                    android:inputType="text|textPersonName"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/baseline_perm_identity_white_24"/>
                <EditText
                    android:id="@+id/editTextEmail"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_email"
                    android:autofillHints="emailAdress"
                    android:inputType="text|textEmailAddress"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/baseline_perm_identity_white_24"/>
                <EditText
                    android:id="@+id/editTextUsername"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_username"
                    android:autofillHints="username"
                    android:inputType="text|textPersonName"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/guitar"/>
                <EditText
                    android:id="@+id/editTextPassword"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_password"
                    android:autofillHints="password"
                    android:inputType="text|textPassword"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/baseline_lock_white_24"/>
                <EditText
                    android:id="@+id/editTextConfirmPassword"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_confirm_password"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"
                    android:drawableStart="@drawable/baseline_lock_white_24"/>
                <EditText
                    android:id="@+id/editTextPhoneNumber"
                    android:layout_width="180dp"
                    android:layout_height="50dp"
                    android:layout_marginVertical="8dp"
                    android:hint="@string/hint_phone_num"
                    android:autofillHints="name"
                    android:inputType="text|phone"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:background="@drawable/edit_text_padding_selector"/>
                <Button
                    android:id="@+id/buttonRegisterAcc"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:shadowColor="@color/black"
                    android:backgroundTint="@color/yellow"
                    android:textColor="@color/black"
                    android:text="@string/button_register"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="20dp">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/yellow"
                        android:layout_marginStart="50dp"
                        android:text="@string/already_has_account"
                        android:textSize="14sp"/>
                    <TextView
                        android:id="@+id/textViewSignUp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/babyblue"
                        android:text="@string/link_signin"
                        android:textStyle="bold|italic"
                        android:clickable="true"
                        android:focusable="true"
                        android:paddingStart="5dp"
                        android:paddingEnd="5dp"
                        android:textSize="14sp"/>
                </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</RelativeLayout>