<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/login_background"
    tools:context=".SignInFragment">
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#66000000"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        app:cardCornerRadius="40dp"
        app:cardElevation="20dp"
        android:backgroundTint="@android:color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center_horizontal"
            android:padding="24dp">
            <TextView
                android:id="@+id/textSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textLogin"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:textSize="36sp"
                android:fontFamily="sans-serif-medium"
                android:textColor="@color/yellow"/>
            <EditText
                android:id="@+id/editTextEmailSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/signin_edittext"
                android:textColor="@color/yellow"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:autofillHints="emailAddress"
                android:textColorHint="@color/white"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/baseline_perm_identity_white_24"/>
            <EditText
                android:id="@+id/editTextPasswordSignIn"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/signin_edittext"
                android:textColor="@color/yellow"
                android:autofillHints="password"
                android:inputType="text|textPassword"
                android:hint="@string/hint_password"
                android:textColorHint="@color/white"
                android:paddingStart="15dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/baseline_lock_white_24"/>
            <Button
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/button_sign_in"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/babyblue"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginTop="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/yellow"
                    android:text="@string/no_account"
                    android:textSize="14sp"/>
                <TextView
                    android:id="@+id/textViewSignUp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/babyblue"
                    android:text="@string/link_signup"
                    android:textStyle="bold|italic"
                    android:clickable="true"
                    android:focusable="true"
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:textSize="15sp"/>
            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>