<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:padding="16dp"
    android:foreground="@drawable/pfp_background"
    android:background="@drawable/pfp_background"
    android:backgroundTint="@color/babyblue">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/text_grade_the_riff"
        android:textSize="35sp"
        android:textStyle="bold"
        android:gravity="center"/>

    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:numStars="5"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:progressTint="@drawable/rating_star_color"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_submit"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="8dp"/>

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btn_cancel"
            android:textSize="20sp"
            android:textAllCaps="false"
            android:layout_margin="8dp"/>
    </LinearLayout>

</LinearLayout>