<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/button_register"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_register"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_welcome" />

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:text="@string/button_sign_in"
            app:layout_constraintBottom_toBottomOf="@id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textview_welcome"
            />

        <TextView
            android:id="@+id/textview_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textview_wild_riff"
            android:textSize="30sp"
            android:fontFamily="monospace"
            app:layout_constraintBottom_toTopOf="@+id/button_register"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>